--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -1,29 +1,34 @@
-*{
+* {
     padding: 0px;
     margin: 0px;
     font-family: "Nunito Sans", sans-serif;
 }
-.navbar{
+
+.navbar {
     padding: 15px 10px;
     box-shadow: 0px -2px 6px grey;
 }
-.btn-primary{
+
+.btn-primary {
     background: linear-gradient(to left, var(--sn_magenta), var(--sn_orange));
     border: none;
     margin: 0px 10px;
 }
-.profile-picture{
+
+.profile-picture {
     height: 45px;
     width: 45px;
     border-radius: 50%;
 }
-.material-symbols-outlined, .nav-text{
+
+.material-symbols-outlined,
+.nav-text {
     position: relative;
     top: 5px;
 }
 
 /* Hompeage styles */
-.hero{
+.hero {
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -33,14 +38,14 @@
     padding: 200px;
 }
 
-.hero h1{
+.hero h1 {
     font-weight: 500;
     text-align: center;
     font-size: 50px;
 }
 
 /* signup / login styles */
-.middle{
+.middle {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -50,7 +55,125 @@
     text-align: center;
     padding: 100px 200px;
 }
-input{
+
+input {
     padding: 10px;
     width: 100%;
 }
+
+.val{
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    background-color: rgb(255, 229, 182);
+    width: 100%;
+    display: none;
+}
+
+/* dashboard styles */
+
+.dashboard {
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.sidebar {
+    grid-area: 1 / 1 / 6 / 2;
+    position: fixed;
+    padding: 20px;
+}
+
+.content {
+    grid-area: 1 / 2 / 6 / 6;
+    padding: 20px;
+}
+
+
+.org {
+    display: flex;
+    width: 100%;
+    background-color: transparent;
+    align-items: center;
+    border: none;
+}
+
+.org-picture {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+.org-left,
+.org-right {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.org-right {
+    text-align: left;
+    padding: 20px 20px 0px 20px;
+}
+
+#org-name {
+    font-size: 15px;
+    margin-bottom: -2px;
+    margin-top: -2px;
+}
+
+#org-members {
+    font-size: 12px;
+    color: silver;
+}
+
+.people-icon{
+    font-size: 18px;
+}
+
+.progress-bar{
+    background: linear-gradient(to left, var(--sn_magenta), var(--sn_orange));
+}
+
+.storage-status{
+    font-size: 8px;
+    color: silver;
+    margin-top: -10px;
+}
+.menu{
+    width: 100%;
+    margin-top: 50px;
+}
+.menu-item{
+    display: block;
+    background-color: rgba(192, 192, 192, 0.3);
+    padding: 10px;
+    width: 100%;
+    color: black;
+    text-decoration: none;
+    border-radius: 10px;
+    margin: 5px 0px;
+}
+
+.cta{
+    background: linear-gradient(to left, var(--sn_magenta), var(--sn_orange));
+    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+}
+.cta h3{
+    color: white;
+    font-size: 22px;
+    position: relative;
+    top:5px;
+}
+.cta button{
+    margin: 0px 10px
+}
+
