--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -4,6 +4,44 @@
     font-family: "Nunito Sans", sans-serif;
 }
 
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #DCEBF5 #FFFFFF;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+    height: 4px;
+    width: 4px;
+}
+
+*::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #FFFFFF;
+}
+
+*::-webkit-scrollbar-track:hover {
+    background-color: #F2FCFF;
+}
+
+*::-webkit-scrollbar-track:active {
+    background-color: #F2FCFF;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #DCEBF5;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #62A34B;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #62A34B;
+}
+
 .navbar {
     padding: 15px 10px;
     box-shadow: 0px -2px 6px grey;
@@ -61,7 +99,7 @@ input {
     width: 100%;
 }
 
-.val{
+.val {
     padding: 10px;
     text-align: center;
     border-radius: 5px;
@@ -130,24 +168,26 @@ input {
     color: silver;
 }
 
-.people-icon{
+.people-icon {
     font-size: 18px;
 }
 
-.progress-bar{
+.progress-bar {
     background: linear-gradient(to left, var(--sn_magenta), var(--sn_orange));
 }
 
-.storage-status{
+.storage-status {
     font-size: 8px;
     color: silver;
     margin-top: -10px;
 }
-.menu{
+
+.menu {
     width: 100%;
     margin-top: 50px;
 }
-.menu-item{
+
+.menu-item {
     display: block;
     background-color: rgba(192, 192, 192, 0.3);
     padding: 10px;
@@ -158,7 +198,7 @@ input {
     margin: 5px 0px;
 }
 
-.cta{
+.cta {
     background: linear-gradient(to left, var(--sn_magenta), var(--sn_orange));
     padding: 30px;
     display: flex;
@@ -167,13 +207,81 @@ input {
     align-items: center;
     border-radius: 10px;
 }
-.cta h3{
+
+.cta h3 {
     color: white;
     font-size: 22px;
     position: relative;
-    top:5px;
+    top: 5px;
 }
-.cta button{
+
+.cta button {
     margin: 0px 10px
 }
 
+.recent-notes, .folders {
+    margin: 20px 0px;
+}
+
+h2 {
+    font-size: 20px;
+}
+
+h4 {
+    font-size: 19px;
+}
+
+.recent-notes-container {
+    max-width: 100%;
+    overflow-x: scroll;
+    flex-grow: 0;
+    white-space: nowrap;
+    padding: 10px 0px;
+}
+
+.note {
+    position: relative;
+    white-space: wrap;
+    width: 200px;
+    height: 300px;
+    padding: 10px;
+    margin-right: 5px;
+    border: 1px solid grey;
+    border-radius: 10px;
+    display: inline-block;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.note div {
+    position: absolute;
+    bottom: 10px;
+}
+
+.note-category {
+    padding: 1px 5px;
+    border-radius: 5px;
+}
+
+.folders-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.folder{
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    background-color:#F2FCFF;
+    width: 300px;
+    border-radius: 10px;
+    margin: 2px;
+}
+.folder span{
+    position:relative;
+    top: -3px;
+}
+.folder p{
+    position:relative;
+    top: 7px;
+    margin-left: 10px;
+}
